[package]
name = "blaze"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
